@@ -8,8 +8,7 @@ import feign.Response;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.nio.charset.StandardCharsets;
-import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -38,6 +37,7 @@ class SpTransAuthClientAdapterTest {
         String cookie = adapter.autenticar();
 
         assertEquals("cookie=valor", cookie);
+        verify(response).close();
     }
 
     @Test
@@ -62,16 +62,20 @@ class SpTransAuthClientAdapterTest {
 
     @Test
     void deveLancarExcecaoQuandoCookieNaoEncontrado() {
-        Response response = criarResposta(200, Map.of());
+        Response response = mock(Response.class);
+        when(response.status()).thenReturn(200);
+        when(response.headers()).thenReturn(Collections.emptyMap());
         when(authClient.autenticar("token")).thenReturn(response);
 
         CookieSessaoNaoEncontradoException exception = assertThrows(CookieSessaoNaoEncontradoException.class, adapter::autenticar);
         assertEquals("Cookie de sessão não encontrado na resposta de autenticação.", exception.getMessage());
+        verify(response).close();
     }
 
     @Test
     void deveLancarExcecaoDeAutenticacaoQuandoStatusNaoSucesso() {
-        Response response = criarResposta(401, Map.of());
+        Response response = mock(Response.class);
+        when(response.status()).thenReturn(401);
         when(authClient.autenticar("token")).thenReturn(response);
 
         AutenticacaoException exception = assertThrows(AutenticacaoException.class, adapter::autenticar);
